# ShapeMateAI

./: .env.example  .gitignore  ADMIN_GUIDE.md  README.md  README_NEW.md  SYSTEM_OVERVIEW.md  admin_tools.py  chat_nutricionista.py  init_system.py  main.py  pyproject.toml  requirements.txt  simple_test.py  terminal_chat.py  test_chat.py  test_config.py  test_daily_assistant.py  test_memory.py
agent/: core.py  memory.py  prompts.py
agent/daily_assistant/: __init__.py  daily_assistant_prompts.py
agent/nutritionist/: __init__.py  user_profile.py
agents/nutritionist/: __init__.py  fatsecret_api_interface.py  nutritionist_prompts.py
api/: banana_teste.py  fatsecret_adapter.py
config/: settings.py
config/agents/: daily_assistant.yaml  nutritionist.yaml
config/tasks/: consultation.yaml  meal_planning.yaml
config/tasks/daily_assistant/: consultation.yaml  daily_support.yaml  diet_substitution.yaml  education.yaml  health_assessment.yaml  meal_planning.yaml  meal_suggestion.yaml  menu_analysis.yaml  shopping_list.yaml
config/tasks/nutritionist/: consultation.yaml  json_generation.yaml  meal_planning.yaml  pdf_generation.yaml  plan_creation.yaml
core/: __init__.py  config_loader.py  core.py
core/agents/: __init__.py  daily_assistant_agent.py  nutritionist_agent.py
database/: __init__.py  config.py  models.py  schemas.py  services.py
docs/: ShapeMateAI_Plan.md  ~$ShapeMateAI_Success_Map.pptx
docs/Cadastro/: Cadastro.md
docs/Nutrion/: Fluxo_Coleta_Informacoes.md  Linguagem_Nutricionista.md
register/: __init__.py  registration.py
user_profiles/: 4db7e652-cbc2-4b6d-a42b-90330d815970.json  55ba85cb-31a5-4bc0-8500-fda9fe955f02.json  66f43658-10e1-47df-ab0b-396fd8e54dd7.json  7b33a6b3-64da-4fa0-80cb-ab205f20597f.json  888c580d-a1dd-48f0-ab3a-ada8fb6685e9.json  9294ade9-168a-48d3-b16b-251d55ce6dd7.json  98f90f5a-a43b-4706-8e3c-1a5015feaf9e.json  d9c1102d-32f1-4511-a8ac-73775f1e0943.json  f0b149a3-dadb-4102-b962-04af7a9bbb8f.json
utils/: __init__.py  cost_tracker.py  nutrition_api.py  pdf_generator.py
utils/diet_manager/: __init__.py  diet_storage.py
utils/pdf_processor/: __init__.py  diet_extractor.py
web/: app.js  app.py  dashboard.html  dashboard.js  index.html  login.html  login.js  register.html  register.js  server.py  style.css
web/static/css/: style.css
web/static/js/: app.js
web/templates/: base.html  chat.html  dashboard.html  error.html  login.html  register.html
web/templates/auth/: login.html  register.html
web/templates/daily_assistant/: chat.html
web/templates/management/: inventory.html  shopping_list.html
web/templates/nutritionist/: chat.html  diet_view.html
web/templates/shared/: base.html  dashboard.html
